# ctk

./: .coveragerc  .gitignore  .src2mdignore  .zenodo.json  404.html  AGENTS.md  CHAT_MODE_COMMANDS.md  CITATION.cff  CLAUDE.md  CONTRIBUTORS.md  FIND_ENHANCEMENT_SUMMARY.md  LICENSE  Makefile  PLAN.md  README.md  SESSION_2_FIXES.md  SESSION_3_SEARCH.md  SHELL_COMMANDS_REFERENCE.md  SHELL_MODE_COMPLETE.md  TESTING_PLAN.md  TEST_COVERAGE_FINAL_SUMMARY.md  TEST_COVERAGE_IMPROVEMENTS.md  TEST_COVERAGE_REPORT.md  TEST_COVERAGE_UPDATE.md  TODO-ECHO.txt  TODO-LONGECHO.md  TODO.md  config.example.json  conversation.py  conversation_tree.py  debug_recent_filtering.py  filter.py  generic_tree.py  grok.py  index.html  langchain.py  mkdocs.yml  mydata.json  pyproject.toml  pytest.ini  (+18 more)
chat-history-old/: cust_inst.txt  parse.py
chatgpt-data/: message_feedback.json  model_comparisons.json  shared_conversations.json  user.json
ctk/: __init__.py  api.py  cli.py  cli_chat.py  cli_config.py  cli_conv.py  cli_db.py  cli_handlers.py  cli_lib.py  cli_llm.py  cli_net.py  cli_refactored.py  cli_tag.py  cloud.py  config.py  context.py  ctk.py  link_tools.py  llm-backup.py  llm-instructions.md  llm.py  mcp_server.py  merge.py  operations.py  semantic_net.py  stats.py  tools.py  utils.py  vis.py  visualize.bak
ctk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data-export/: model_comparisons.json  shared_conversations.json
dev/: es.py
docs/: ARCHITECTURE.md  COVERAGE_SUMMARY.md  EMBEDDING_SESSION_TRACKING.md  NETWORK_ANALYSIS_DESIGN.md  PROGRESS_SHELL_MODE.md  README.md  (+30 more)
(+358 files in other folders)
