[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conversation-tk"
version = "0.4.0"
description = "A CLI tool and library for managing and analyzing LLM chats."
readme = "README.md"
requires-python = ">=3.7"

# List your runtime dependencies here:
dependencies = [
    "jmespath>=1.0.0",
    "streamlit>=1.0.0",
    # argparse is part of the Python standard library, so it's not needed here.
    # Add any others you actually use.
]

# Optional: authors/maintainers
authors = [
  { name="Alex Towell", email="lex@metafunctor.com" }
]

# Entry points let you define console commands that map to Python functions.
# The key "console_scripts" is recognized by setuptools for installing CLI tools.
[project.scripts]
ctk = "ctk.cli:main"

[tool.setuptools.packages.find]
include = ["ctk*"]

